--- a/app/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/item_list_fragment"
         android:name="com.example.myapplication.ItemListFragment"
-        android:label="ItemListFragment">
+        android:label="Menu">
         <action
             android:id="@+id/show_item_detail"
             app:destination="@id/item_detail_fragment" />
